# KeyCrmApi

./: pyproject.toml
KeyCrm/: __init__.py  api.py  exceptions.py  utils.py
KeyCrm/UserApi/: __init__.py  api.py
KeyCrm/UserApi/minix/: client.py  company.py  conversation.py  import_.py  login.py  product.py
KeyCrm/UserApi/types/: account.py  buyer.py  client.py  client_query.py  company.py  conversation.py  file.py  import_field.py  product.py
KeyCrm/UserApi/types/conversation/: __init__.py  conversation.py  conversation_message.py  message.py  messages.py
KeyCrm/UsersApi/: __init__.py  login.py  types.py
KeyCrm/minix/: __init__.py  buyer.py  custom_fields.py  offers.py  order.py  products.py  storage.py
KeyCrm/types/: base.py  buyer.py  category.py  company.py  costom_fields.py  file.py  meneger.py  offers.py  order.py  product.py  shipping_address.py
KeyCrm/webhook/: parser.py
KeyCrm/webhook/types/: base.py  order.py
